test-resources.yml
# Create an Issuer to test the webhook works
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager-test
