eks-sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eks-sample-linux-service
  namespace: demo
  labels:
    app: eks-sample-linux-app
spec:
  selector:
    app: eks-sample-linux-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80kubectl get all -n eks-sample-app
