eks_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiber-demo
  namespace: demo
  labels:
    app: fiber-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiber-demo
  template:
    metadata:
      labels:
        app: fiber-demo
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
                      - arm64
      containers:
        - name: fiber-demo
          image: 240195868935.dkr.ecr.us-east-2.amazonaws.com/fiber-demo:0.0.2
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: fiber-demo
  namespace: demo
  labels:
    app: fiber-demo
spec:
  selector:
    app: fiber-demo
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fiber-demo
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing

  labels:
    app: fiber-demo
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: fiber-demo
              servicePort: 80
